--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Averia+Sans+Libre:ital,wght@0,300;0,400;1,700&family=Marhey:wght@300;600;700&family=Montagu+Slab:opsz,wght@16..144,500&family=Noto+Serif:ital,wght@0,800;0,900;1,800;1,900&family=Pridi:wght@500&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/f25cce70b4.js" crossorigin="anonymous"></script> 
   <!--KITCODE: f25cce70b4--   #1b9bff-->
-   
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WHZY91PB50"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WHZY91PB50');
+</script>
   <script>
     function getLocation() {
       if (navigator.geolocation) {
@@ -339,7 +347,7 @@ nav .content .links{
             <input type="checkbox" id="show-services0">
             <label for="show-services0"><i class="fab fa-pagelines"></i> CROPS / फसलें   <i class="fa-solid fa-caret-down "></i></label>
             <ul>            
-              <li><a href="https://vamshicompililng.github.io/goaType/" target="mf">  <i class="fas fa-leaf fa-shake"></i> TYPES / प्रकार </a></li>
+              <li><a href="https://vamshicompililng.github.io/goaTypes/" target="mf">  <i class="fas fa-leaf fa-shake"></i> TYPES / प्रकार </a></li>
 			  <li><a href="https://vamshicompililng.github.io/goaGrow/" target="mf"> <i class="fa-solid fa-arrow-up-right-dots fa-beat"></i> GROWTH / विकास  </a></li>
 		    </ul>
 		  </li>
@@ -416,7 +424,7 @@ nav .content .links{
             <ul>
               <li><a href="https://www.ventusky.com/?p=21.8;76.4;3&l=rain-3h" target="mf"><i class="fa-solid fa-hurricane fa-spin"></i> CYCLONE MAP / तूफान का नक्शा   </a></li>
               <li><a href="" onclick="getLocation()" > <i class="fa-solid fa-temperature-low fa-bounce"></i> TEMPERATURE / तापमान </a></li>
-              <li><a href="https://www.assamtv9.com/assam" target="mf"><i class="fa-solid fa-newspaper fa-shake"></i> NEWS / समाचार   </a></li>
+              <li><a href="https://timesofindia.indiatimes.com/travel/goa/weather" target="mf"><i class="fa-solid fa-newspaper fa-shake"></i> NEWS / समाचार   </a></li>
               <!--li>
                  https://www.ventusky.com/?p=21.8;76.4;3&l=feel 
                 <a href="#" class="desktop-link">WEATHER / मौसम  </a>
